--- a/package.json
+++ b/package.json
@@ -18,21 +18,23 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.0.2",
     "contentful": "^9.2.15",
-    "gatsby": "^5.3.3",
+    "gatsby": "^4.5.4",
+    "gatsby-plugin-manifest": "^4.14.0",
+    "@netlify/plugin-gatsby": "^3.5.0",
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-sass": "^6.3.1",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-source-contentful": "^8.3.1",
     "gatsby-transformer-sharp": "^5.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "sass": "^1.57.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-netlify": "^5.0.0",
     "typescript": "^4.9.4"
   }
 }
