--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-image": "^2.25.0",
     "gatsby-plugin-manifest": "^4.14.0",
     "gatsby-plugin-netlify": "^4.4.0",
+    "gatsby-plugin-sass": "^5.25.0",
     "gatsby-plugin-sharp": "^4.25.0",
     "gatsby-source-contentful": "^7.23.0",
     "react": "^18.0.0",
