--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-sass": "^5.25.0",
     "gatsby-plugin-sharp": "^4.25.0",
     "gatsby-source-contentful": "^7.23.0",
+    "gatsby-source-facebook-graphql": "^0.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.57.1"
