--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-sharp": "^4.25.0",
     "gatsby-source-contentful": "^7.23.0",
     "gatsby-source-facebook-graphql": "^0.0.2",
+    "gatsby-transformer-json": "^4.25.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.57.1"
