--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby": "^4.5.4",
     "gatsby-plugin-image": "^2.25.0",
     "gatsby-plugin-manifest": "^4.14.0",
+    "gatsby-plugin-plausible": "^0.0.7",
     "gatsby-plugin-sass": "^5.25.0",
     "gatsby-plugin-sharp": "^4.25.0",
     "gatsby-source-contentful": "^7.23.0",
