--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-manifest": "^4.14.0",
     "gatsby-plugin-plausible": "^0.0.7",
     "gatsby-plugin-sass": "^5.25.0",
+    "gatsby-plugin-schema-snapshot": "^3.25.0",
     "gatsby-plugin-sharp": "^4.25.0",
     "gatsby-source-contentful": "^7.23.0",
     "gatsby-source-facebook-graphql": "^0.0.2",
