--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-source-facebook-graphql": "^0.0.2",
     "gatsby-transformer-json": "^4.25.0",
     "gatsby-transformer-sharp": "^4.25.0",
+    "lodash-es": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.57.1"
