install stripe plugins

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@contentful/rich-text-html-renderer": "^16.0.2",
     "@netlify/plugin-gatsby": "^3.5.0",
     "@popperjs/core": "^2.11.6",
+    "@stripe/stripe-js": "^3.0.10",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "contentful": "^9.2.15",
@@ -31,6 +32,7 @@
     "gatsby-plugin-sharp": "^4.25.0",
     "gatsby-source-contentful": "^7.23.0",
     "gatsby-source-facebook-graphql": "^0.0.2",
+    "gatsby-source-stripe": "^4.0.0",
     "gatsby-transformer-json": "^4.25.0",
     "gatsby-transformer-sharp": "^4.25.0",
     "lodash-es": "^4.17.21",
