--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lodash-es": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "use-shopping-cart": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
