--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "gatsby-plugin-netlify": "^4.4.0",
+    "netlify-cli": "^17.19.6",
     "typescript": "^4.9.4"
   }
 }
