--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "generateProductsJson": "env-cmd -f .env.production node stripe/generate-products-data-json.js"
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.0.2",
