--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.0.2",
+    "@contentful/rich-text-react-renderer": "^15.21.2",
+    "@contentful/rich-text-types": "^16.5.2",
     "@netlify/plugin-gatsby": "^3.5.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
