--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash-es": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-responsive-masonry": "^2.3.0",
     "sass": "^1.57.1"
   },
   "devDependencies": {
