--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-transformer-sharp": "^4.25.0",
     "lodash-es": "^4.17.21",
     "react": "^18.0.0",
+    "react-cool-inview": "^3.0.1",
     "react-dom": "^18.0.0",
     "react-responsive-masonry": "^2.3.0",
     "sass": "^1.57.1"
