--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "cy:open": "cypress open",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -47,6 +48,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "cypress": "^13.13.2",
     "gatsby-plugin-netlify": "^4.4.0",
     "typescript": "^4.9.4"
   }
