--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "sass": "^1.57.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.7",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
